feat: implement get methode rest api; fix: api rest specification; feat: add exceptation handler
