# docs/api.yml
@@ -13,6 +13,17 @@ paths:
         - Matchs
       summary: get all Matchs
       operationId: getMatchs
+      parameters:
+        - name: page
+          required: true
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          required: true
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
       responses:
         '200':
           description: List of Matchs
@@ -35,6 +46,17 @@ paths:
         - Teams
       summary: get all Teams
       operationId: getTeams
+      parameters:
+        - name: page
+          required: true
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          required: true
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
       responses:
         '200':
           description: List of Teams
@@ -57,6 +79,38 @@ paths:
         - Players
       summary: get all Players
       operationId: getPlayers
+      parameters:
+        - name: page
+          required: true
+          in: query
+          schema:
+            $ref: '#/components/schemas/Page'
+        - name: page_size
+          required: true
+          in: query
+          schema:
+            $ref: '#/components/schemas/PageSize'
+      responses:
+        '200':
+          description: List of Players
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Player'
+        '500':
+          description: Internal server error
+        '400':
+          description: Bad request
+        '404':
+          description: Ressource not found
+  /teams/{teamId}/players:
+    get:
+      tags:
+        - Players
+      summary: get Players by team's id
+      operationId: getPlayersByteamId
       responses:
         '200':
           description: List of Players
@@ -103,13 +157,17 @@ components:
         type: object
         properties:
           players:
-            type: array
-            items:
-              $ref: '#/components/schemas/Player'
+              type: string
+              example: 
+                - "Cristiano Ronaldo"
+                - "Lionel Messi"
+
+
           sponsors:
             type: array
             items:
-              $ref: '#/components/schemas/Sponsor'
+              type: string
+              example: "Konami"
         allOf:
           - $ref: '#/components/schemas/UpdateTeam'
     UpdateTeam:
@@ -168,3 +226,9 @@ components:
           name:
             type: string
             example: "Konami"
+    Page:
+      type: integer
+      description: Start at `1`
+    PageSize:
+      type: integer
+      description: Cannot exceed `200`
